# kitex_gen/core_api/core_api.pb.go
@@ -12,7 +12,7 @@ type User interface {
 	UserGetInfo(ctx context.Context, req *UserGetInfoReq) (res *UserGetInfoResp, err error)
 	UserUpdateInfo(ctx context.Context, req *UserUpdateInfoReq) (res *basic.Response, err error)
 	UserUpdatePassword(ctx context.Context, req *UserUpdatePasswordReq) (res *basic.Response, err error)
-	CreateUser(ctx context.Context, req *CreateUserReq) (res *basic.Response, err error)
+	CreateUser(ctx context.Context, req *CreateUserReq) (res *CreateUserResp, err error)
 	SendVerifyCode(ctx context.Context, req *SendVerifyCodeReq) (res *basic.Response, err error)
 	SuperAdminSignIn(ctx context.Context, req *UserSignInReq) (res *UserSignInResp, err error)
 }
